# Phigros-TK-render-lib

./: Cargo.toml  README.md
.github/workflows/: main.yml
phira/: Cargo.toml
phira-monitor/src/: main.rs
phira/locales/en-US/: settings.ftl
phira/locales/zh-CN/: settings.ftl
phira/src/page/: settings.rs
prpr/: Cargo.toml
prpr-avc/: Cargo.toml  build.rs
prpr-pbc/: Cargo.toml  build.rs
prpr/src/: bin.rs  config.rs  core.rs  ext.rs  judge.rs  lib.rs  scene.rs  time.rs  tips.txt  ui.rs
prpr/src/core/: chart.rs  line.rs  note.rs  resource.rs
prpr/src/core/shaders/: noise.glsl  pixel.glsl  shockwave.glsl
prpr/src/parse/: pec.rs  pgr.rs  rpe.rs
prpr/src/scene/: ending.rs  game.rs  loading.rs
prpr/src/ui/: text.rs
