[package]
name = "prpr-avc"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
sasa = { git = "https://github.com/Mivik/sasa", default-features = false }
thiserror = "1.0.56"
tracing = "0.1.37"
lzma = { version = "0.2.2", default-features = false }

[build-dependencies]
x11 = "2.21.0"
lzma = "0.2.2"
